force-app/main/default/objects/SCC_Level_2_Hover_Help__mdt/SCC_Level_2_Hover_Help__mdt.object-meta.xml
<CustomObject>
    <label>SCC Level 2 Hover Help</label>
    <pluralLabel>SCC Level 2 Hover Help</pluralLabel>
</CustomObject>