force-app/main/default/objects/SCC_Level_2_Hover_Help__mdt/fields/Indicate_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Indicate_Vendor__c</fullName>
    <label>Indicate Vendor</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>