force-app/main/default/objects/SCC_Level_2_Hover_Help__mdt/fields/List_any_applicable_customization__c.field-meta.xml
<CustomField>
    <fullName>List_any_applicable_customization__c</fullName>
    <label>List any applicable customization</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>