force-app/main/default/objects/SCC_Level_2_Hover_Help__mdt/fields/Provide_plan_code_in_text_box__c.field-meta.xml
<CustomField>
    <fullName>Provide_plan_code_in_text_box__c</fullName>
    <label>Provide plan code in text box</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>