force-app/main/default/objects/SCC_Level_2_Hover_Help__mdt/fields/Specify_Bank_Administrator__c.field-meta.xml
<CustomField>
    <fullName>Specify_Bank_Administrator__c</fullName>
    <label>Specify Bank Administrator</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>